force-app/main/default/objects/NRV10ManagerAssignment__c/NRV10ManagerAssignment__c.object-meta.xml
<CustomObject>
    <description>Manage all managers assignment and their replacement in one location for each stores.</description>
    <label>Affectation du responsable</label>
    <nameField>
        <displayFormat>MA/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affectation des responsables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>