force-app/main/default/objects/NRV10ManagerAssignment__c/fields/replaced__c.field-meta.xml
<CustomField>
    <fullName>replaced__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remplacé</label>
    <referenceTo>Collaborator__c</referenceTo>
    <relationshipLabel>Affectation du responsable(Remplacé)</relationshipLabel>
    <relationshipName>Affectation_du_responsable</relationshipName>
    <type>Lookup</type>
</CustomField>