force-app/main/default/objects/NRV10ManagerAssignment__c/fields/role__c.field-meta.xml
<CustomField>
    <fullName>role__c</fullName>
    <label>Rôle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>RVJ</fullName>
            </value>
            <value>
                <fullName>Remplaçant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>