force-app/main/default/objects/NRV10ManagerAssignment__c/fields/salesManager__c.field-meta.xml
<CustomField>
    <fullName>salesManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable d&apos;équipe</label>
    <referenceTo>Collaborator__c</referenceTo>
    <relationshipLabel>Affectation du responsable d&apos;équipe</relationshipLabel>
    <relationshipName>Affectation_des_responsables</relationshipName>
    <type>Lookup</type>
</CustomField>