force-app/main/default/objects/NRV10ManagerAssignment__c/fields/store__c.field-meta.xml
<CustomField>
    <fullName>store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Magasin</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affectation des responsables</relationshipLabel>
    <relationshipName>Affectation_des_responsables_del</relationshipName>
    <type>Lookup</type>
</CustomField>