force-app/main/default/objects/NRV10ManagerAssignment__c/fields/team__c.field-meta.xml
<CustomField>
    <fullName>team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipe</label>
    <referenceTo>NRV10Team__c</referenceTo>
    <relationshipLabel>Affectation du responsable</relationshipLabel>
    <relationshipName>Affectation_des_responsables</relationshipName>
    <type>Lookup</type>
</CustomField>