force-app/main/default/objects/NRV10ManagerAssignment__c/validationRules/VR_K3_ManagerAssignment_DateDeFin.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ManagerAssignment_DateDeFin</fullName>
    <active>true</active>
    <description>Vérifie que la date de fin est supérieure ou égale à la date de début</description>
    <errorConditionFormula>AND(!ISBLANK(endDate__c), endDate__c &lt; startDate__c)</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>La date de fin doit être postérieure à la date de début</errorMessage>
</ValidationRule>