force-app/main/default/objects/NRV10ManagerAssignment__c/validationRules/VR_K3_ManagerAssignment_Remplace.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ManagerAssignment_Remplace</fullName>
    <active>true</active>
    <description>Vérifie que le remplacé est renseigné si le rôle est &apos;Remplaçant&apos;</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, ISPICKVAL(role__c, &apos;Remplaçant&apos;), ISBLANK(replaced__c))</errorConditionFormula>
    <errorDisplayField>replaced__c</errorDisplayField>
    <errorMessage>Le remplacé doit être renseigné</errorMessage>
</ValidationRule>