force-app/main/default/objects/NRV10ManagerAssignment__c/validationRules/VR_K3_ManagerAssignment_TypeMagasin.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ManagerAssignment_TypeMagasin</fullName>
    <active>true</active>
    <description>Vérifie que le magasin associé est du bon type (Entité).</description>
    <errorConditionFormula>store__r.RecordType.DeveloperName &lt;&gt; &apos;Entity&apos;</errorConditionFormula>
    <errorDisplayField>store__c</errorDisplayField>
    <errorMessage>Le compte associé doit avoir un type d&apos;enregistrement &apos;Entité&apos;</errorMessage>
</ValidationRule>